--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <div id="visitMessage"></div>
             <h3>Local Events</h3>
             <ul>
-                <li>Event 1: January 1, 2024</li>
-                <li>Event 2: February 14, 2024</li>
-                <li>Event 3: March 21, 2024</li>
+                <li>Business Fair Lodwar: January 1, 2024</li>
+                <li>Business Fair Lokichar: February 14, 2024</li>
+                <li>Business Fair Kakuma: March 21, 2024</li>
             </ul>
         </div>
         <div class="gallery">
