--- a/index2.html
+++ b/index2.html
@@ -44,7 +44,7 @@
         <nav id="navMenu">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="https://johnasuron.github.io/wdd230-chamber/" target="_blank">Chamber</a></li>
+                <li><a href="https://johnasuron.github.io/wdd230-chamber/">Chamber</a></li>
                 <li><a href="chamber-site-plan.html">Site Plan</a></li>
                 <li><a href="#">Form</a></li>
             </ul>
