--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="https://johnasuron.github.io/wdd230-chamber/">Chamber</a></li>
                 <li><a href="chamber-site-plan.html">Site Plan</a></li>
-                <li><a href="#">Form</a></li>
+                <li><a href="https://johnasuron.github.io/wdd230/forms.html">Form</a></li>
             </ul>
         </nav>
     </header>
